// Copyright 2017 The Solid Core Data Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package api;

service SPA {
	// TODO: RequestAuth and Login should both take some additional features
	// about where the request is coming from (HTTPS info, remote address).
    rpc FetchUI(FetchUIRequest) returns (FetchUIResponse);
}

message FetchUIRequest {
	repeated string List = 1;
}

message FetchUIResponse {
	repeated FetchUIItem List = 1;
	
}

message FetchUIItem {
	string Name = 1;
	string Body = 2; // JSON, Javascript
}
